--- a/vue_kidwiz/public/admin.html
+++ b/vue_kidwiz/public/admin.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <h1>관리자 페이지입니다</h1>
-  <h3>잘 나오는지 확인</h3>
+  <h1>admin.html 페이지입니다</h1>
+  <h3></h3>
 </head>
 <body>
   <div id="admin-app"></div>
